PRJ-55 - Fix toolbar active button shift

--- a/src/bp-templates/bp-nouveau/readylaunch/css/activity.css
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/activity.css
@@ -255,6 +255,7 @@
   color: var(--bb-rl-icon-secondary-color);
   font-size: var(--bb-rl-base-line);
   padding: var(--bb-rl-space-50);
+  border: 0.5px solid transparent;
   cursor: pointer;
 }
 
@@ -848,6 +849,7 @@
 
 .bb-rl-whats-new-toolbar--addon .bb-rl-post-elements-buttons-item [class*="toolbar-button"].bb-rl-toolbar-button {
   padding: 0;
+  border: 0;
 }
 
 .activity-url-scrapper-container {
